added contacts doe

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <header class= "clearfix">
         <h1>Daniel Kim </h1>
    
-        <h3 style="margin-right:182px">About</h3>
+        <h3 style="margin-right:182px">Contact</h3>
         <h3>Portfolio</h3>
-        <h3>Contact</h3>
+        <h3>About</h3>
    
     </header>
     <div class= " bio container">
