added contact and fixed portfolio

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Daniel Kim's Portfolio</title>
 </head>
 <body>
-    <div>
+    <div class="clearfix">
     <header class= "clearfix">
         <h1>Daniel Kim </h1>
    
@@ -17,9 +17,9 @@
         <h3>About</h3>
    
     </header>
-    <div class= " bio container">
+    <div class= "clearfix bio container">
         <h2>About Me</h2>
-        <img src= "assets/images/profile-photo.jpg" alt= "Daniel's Face" width= "400" height= "300" />
+        <img style="float:left;margin-bottom:120px" src= "assets/images/profile-photo.jpg" alt= "Daniel's Face" width= "400" height= "300" />
         <section class= "bio">
         <p>I was born in Los Angeles, California, but was raised down in Atlanta, Georgia because I moved down south
             at an early age. Coming from a mixed background of marketing and risk management and insurance, coding
