--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     <header class= "clearfix">
         <h1>Daniel Kim </h1>
    
-        <h3 style="margin-right:182px">Contact</h3>
+        <h3 style="margin-right:182px;">Contact</h3>
         <h3>Portfolio</h3>
         <h3>About</h3>
    
