--- a/contact.html
+++ b/contact.html
@@ -12,12 +12,12 @@
     <header class= "clearfix">
         <h1>Daniel Kim </h1>
    
-        <h3 style="margin-right:182px">Contact</h3>
-        <h3>Portfolio</h3>
-        <h3>About</h3>
+        <h3 style="margin-right:182px"><a href="contact.html">Contact</a></h3>
+        <h3><a href="portfolio.html">Portfolio</a></h3>
+        <h3><a href="index.html">About</a></h3>
    
     </header>
-    <div class= "bio container">
+    <div style="margin-bottom:10px" class= "bio container">
     <div class= "clearfix picMargin">
         <h2>Contact</h2>
        
