updated readme with deployed link

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     </header>
     <div style="margin-bottom:10px" class= "bio container">
     <div class= "clearfix picMargin">
-        <h2>Contact</h2>
+        <h2>Contact Me</h2>
        
         <form style="margin-bottom:130px" action="/action_page.php" method="get">
             Name: <input type="text" name="name"><br><br>
